# cudnn_frontend_samples

./: .ccls  .gitignore  CMakeLists.txt  README.md
b/: cudnn_frontend_example
docs_trans/: norm.md
include/: cudnn_frontend_wrapper.h
src/: batch_norm.cpp  batch_norm.h  batchnorm.cpp  batchnorm.h  bench_batch_norm.cpp  bench_batch_norm_2d.cpp  conv.cpp  conv.h  cudnn_frontend_wrapper.cpp  cudnn_frontend_wrapper.h  i_graph_desc.h  main.cpp  utils.h
temp/: bench_batch_norm_2d.cpp  conv_.h  cudnn_frontend_wrapper_.h  main.cpp  utils.h
tests/: batchnorm.cpp  conv.cpp  helpers.h
